--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="word_name">word name</string>
     <string name="count">count</string>
     <string name="offline_connection">offline connection</string>
+    <string name="error_message">error message</string>
 </resources>
